--- a/cloth-shop/src/Component/RelatedProducts/RelatedProducts.css
+++ b/cloth-shop/src/Component/RelatedProducts/RelatedProducts.css
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 10px;
     height: 90vh;
+    padding-bottom: 200px;
 }
 .relatedproducts h1 {
     color: #171717;
